--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -1,47 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tic Tac Toe</title>
-</head>
-<body>
-
-  <!-- New game menu start -->
-
-  Pick player 1's mark
-  Remember: X goes first
-
-  New Game (vs CPU)
-  New Game (vs player)
-
-  <!-- New game menu end -->
-
-  <!-- Game board start -->
-
-  <!-- x/o icon --> turn
-
-  X (You) <!-- Your score -->
-  Ties <!-- Ties score -->
-  X (CPU) <!-- CPU score -->
-
-  Oh no, you lost
-  You won!
-  Player <!-- 1/2 --> wins!
-
-  <!-- x/o icon --> takes the round
-  Round tied
-  Restart game?
-
-  Quit
-  Next round
-  No, cancel
-  Yes, restart
-
-  <!-- Game board end -->
-
-</body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Tic Tac Toe</title>
+  </head>
+  <body>
+    <div class="outer">
+      <main class="content">
+        <div class="menu hidden"></div>
+        <div class="game">
+          <div class="top">
+            <img class="logo" src="images/logo.svg" alt="" />
+            <div class="turn">
+              <div class="turn__icon x"></div>
+              <span class="turn__text">turn</span>
+            </div>
+            <button class="reset">
+              <img src="images/icon-restart.svg" alt="restart" />
+            </button>
+          </div>
+          <div class="board">
+            <button class="square square--1 x"></button>
+            <button class="square square--2 o"></button>
+            <button class="square square--3"></button>
+            <button class="square square--4"></button>
+            <button class="square square--5"></button>
+            <button class="square square--6"></button>
+            <button class="square square--7"></button>
+            <button class="square square--8"></button>
+            <button class="square square--9"></button>
+          </div>
+          <div class="score">
+            <div class="p1">
+              <span class="score__text">x (you)</span
+              ><span class="score__number">14</span>
+            </div>
+            <div class="ties">
+              <span class="score__text">ties</span
+              ><span class="score__number">32</span>
+            </div>
+            <div class="p2">
+              <span class="score__text">o (cpu)</span
+              ><span class="score__number">11</span>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+    <div class="modal hidden"></div>
+  </body>
 </html>
