--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -11,7 +11,7 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="js/script.js" type="module"></script>
+    <script src="js/controller.js" type="module"></script>
     <title>Frontend Mentor | Tic Tac Toe</title>
   </head>
   <body>
