tic tac toe - responsive

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -75,16 +75,16 @@
             <button id="s-7" class="square"></button>
             <button id="s-8" class="square"></button>
           </div>
-          <div class="score">
-            <div class="score-x">
+          <div class="scores">
+            <div class="score score-x">
               <span id="score-x-text" class="score__text">x (you)</span
               ><span id="score-x" class="score__number">0</span>
             </div>
-            <div class="score-t">
+            <div class="score score-t">
               <span class="score__text">ties</span
               ><span id="score-t" class="score__number">0</span>
             </div>
-            <div class="score-o">
+            <div class="score score-o">
               <span id="score-o-text" class="score__text">o (cpu)</span
               ><span id="score-o" class="score__number">0</span>
             </div>
