nft preview card component - css

--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -12,45 +12,47 @@
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
-  <body>
-    <div class="l-container container">
-      <main class="c-card">
+  <body class="body">
+    <div class="l-centered">
+      <main class="c-card l-col l-gap--m">
         <img
           class="c-card__pic"
           src="assets/images/image-equilibrium.jpg"
           alt="a NFT picture of a cube"
         />
-        <h1 class="c-card__title">Equilibrium #3429</h1>
-        <p class="c-card__copy">
-          Our Equilibrium collection promotes balance and calm.
-        </p>
-        <div class="c-card__info">
-          <p class="c-card__eth">
+        <div class="l-col l-gap--s">
+          <h1 class="c-card__title">Equilibrium #3429</h1>
+          <p class="c-card__copy">
+            Our Equilibrium collection promotes balance and calm.
+          </p>
+        </div>
+        <div class="l-row l-between">
+          <div class="l-row l-gap--xs">
             <img
-              class="c-card__icn"
+              class="c-card__icn c-card__icn--eth"
               src="assets/images/icon-ethereum.svg"
               alt="etherium"
             />
-            0.041 ETH
-          </p>
-          <p class="c-card__time">
+            <p class="c-card__info c-card__info--eth">0.041 ETH</p>
+          </div>
+          <div class="l-row l-gap--xs">
             <img
-              class="c-card__icn"
+              class="c-card__icn c-card__icn--time"
               src="assets/images/icon-clock.svg"
               alt="clock"
             />
-            3 days left
-          </p>
+            <p class="c-card__info c-card__info--time">3 days left</p>
+          </div>
         </div>
         <hr class="c-card__divider" />
-        <div class="c-card__author">
+        <div class="l-row l-gap--s">
           <img
             src="assets/images/image-avatar.png"
             alt="picture of Jules Wyvern"
             class="c-card__avatar"
           />
-          <p class="c-card__author-copy">
-            <em class="emphasis">Creation of</em> Jules Wyvern
+          <p class="c-card__author">
+            Creation of <span class="emphasis">Jules Wyvern</span>
           </p>
         </div>
       </main>
