nft preview card component - active states

--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -15,13 +15,20 @@
   <body class="body">
     <div class="l-centered">
       <main class="c-card l-col l-gap--m">
-        <img
-          class="c-card__pic"
-          src="assets/images/image-equilibrium.jpg"
-          alt="a NFT picture of a cube"
-        />
+        <div class="u-pic-hover">
+          <img
+            class="u-pic-hover__view"
+            src="assets/images/icon-view.svg"
+            alt="eye"
+          />
+          <img
+            class="c-card__pic u-pic-hover__img"
+            src="assets/images/image-equilibrium.jpg"
+            alt="a NFT picture of a cube"
+          />
+        </div>
         <div class="l-col l-gap--s">
-          <h1 class="c-card__title">Equilibrium #3429</h1>
+          <h1 class="c-card__title u-text-hover">Equilibrium #3429</h1>
           <p class="c-card__copy">
             Our Equilibrium collection promotes balance and calm.
           </p>
@@ -52,7 +59,7 @@
             class="c-card__avatar"
           />
           <p class="c-card__author">
-            Creation of <span class="emphasis">Jules Wyvern</span>
+            Creation of <span class="emphasis u-text-hover">Jules Wyvern</span>
           </p>
         </div>
       </main>
