sass for beginners - final

--- a/sass-bem-beginners/index.html
+++ b/sass-bem-beginners/index.html
@@ -22,13 +22,31 @@
         </p>
       </main>
       <aside class="grid__sidebar">
-        <h2>More Info</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vitae
-          fugiat voluptas quae magni odio provident ab dolorem unde! Officiis
-          saepe dicta nulla voluptates aspernatur earum numquam possimus
-          veritatis eligendi.
-        </p>
+        <div class="grid__widget primary">
+          <h2>More Info</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vitae
+            fugiat voluptas quae magni odio provident ab dolorem unde! Officiis
+            saepe dicta nulla voluptates aspernatur earum numquam possimus
+            veritatis eligendi.
+          </p>
+        </div>
+        <div class="grid__widget--secondary">
+          <h2>Check out this cook thing!</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa minus
+            suscipit, quo magni voluptatum expedita velit nostrum earum dolores
+            perspiciatis hic temporibus adipisci. Blanditiis dolore quidem
+            necessitatibus modi consequatur numquam!
+          </p>
+        </div>
+        <div class="grid__widget">
+          <h2>More cool stuff is right here too!</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+            dolore animi aliquid consectetur at maxime tenetur, blanditiis ut.
+          </p>
+        </div>
       </aside>
     </div>
   </body>
