--- a/loopstudios-landing-page/index.html
+++ b/loopstudios-landing-page/index.html
@@ -12,5 +12,100 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | Loopstudios landing page</title>
   </head>
-  <body></body>
+  <body>
+    <main class="content-grid">
+      <section class="splash full-width content-grid">
+        <header class="header">
+          <img class="header__logo" src="images/logo.svg" alt="loopstudios" />
+          <img
+            class="header__menu"
+            src="images/icon-hamburger.svg"
+            alt="menu"
+          />
+        </header>
+        <h1 class="main-title">Immersive experiences that deliver</h1>
+      </section>
+      <section class="intro">
+        <img
+          class="intro__pic"
+          src="images/mobile/image-interactive.jpg"
+          alt="a man using a VR headset"
+        />
+        <div class="intro__content">
+          <h2 class="intro__title">The leader in interactive VR</h2>
+          <p>
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
+      </section>
+      <section class="creations">
+        <h2 class="creations__title">Our creations</h2>
+        <ul class="creations__cards">
+          <li class="creations__card">
+            <h3 class="creations__subtitle">Deep<br />earth</h3>
+          </li>
+          <li class="creations__card">
+            <h3 class="creations__subtitle">Night<br />arcade</h3>
+          </li>
+          <li class="creations__card">
+            <h3 class="creations__subtitle">Soccer<br />team VR</h3>
+          </li>
+          <li class="creations__card">
+            <h3 class="creations__subtitle">The<br />grid</h3>
+          </li>
+          <li class="creations__card">
+            <h3 class="creations__subtitle">From up<br />above VR</h3>
+          </li>
+          <li class="creations__card">
+            <h3 class="creations__subtitle">Pocket<br />borealis</h3>
+          </li>
+          <li class="creations__card">
+            <h3 class="creations__subtitle">The<br />curiosity</h3>
+          </li>
+          <li class="creations__card">
+            <h3 class="creations__subtitle">Make it<br />fisheye</h3>
+          </li>
+        </ul>
+        <button class="creations__btn btn">see all</button>
+      </section>
+      <footer class="footer full-width">
+        <img class="footer__logo" src="images/logo.svg" alt="loopstudios" />
+        <ul class="footer__links">
+          <li class="footer__link">About</li>
+          <li class="footer__link">Careers</li>
+          <li class="footer__link">Events</li>
+          <li class="footer__link">Products</li>
+          <li class="footer__link">Support</li>
+        </ul>
+        <ul class="footer__socials">
+          <img
+            src="images/icon-facebook.svg"
+            alt="facebook"
+            class="footer__social"
+          />
+          <img
+            src="images/icon-twitter.svg"
+            alt="twitter"
+            class="footer__social"
+          />
+          <img
+            src="images/icon-pinterest.svg"
+            alt="pinterest"
+            class="footer__social"
+          />
+          <img
+            src="images/icon-instagram.svg"
+            alt="instagram"
+            class="footer__social"
+          />
+        </ul>
+        <p class="footer__copyright">
+          © 2021 Loopstudios. All rights reserved.
+        </p>
+      </footer>
+    </main>
+  </body>
 </html>
