loopstudios landing page - tablet

--- a/loopstudios-landing-page/index.html
+++ b/loopstudios-landing-page/index.html
@@ -71,40 +71,42 @@
         </ul>
         <button class="creations__btn btn">see all</button>
       </section>
-      <footer class="footer full-width">
-        <img class="footer__logo" src="images/logo.svg" alt="loopstudios" />
-        <ul class="footer__links">
-          <li class="footer__link">About</li>
-          <li class="footer__link">Careers</li>
-          <li class="footer__link">Events</li>
-          <li class="footer__link">Products</li>
-          <li class="footer__link">Support</li>
-        </ul>
-        <ul class="footer__socials">
-          <img
-            src="images/icon-facebook.svg"
-            alt="facebook"
-            class="footer__social"
-          />
-          <img
-            src="images/icon-twitter.svg"
-            alt="twitter"
-            class="footer__social"
-          />
-          <img
-            src="images/icon-pinterest.svg"
-            alt="pinterest"
-            class="footer__social"
-          />
-          <img
-            src="images/icon-instagram.svg"
-            alt="instagram"
-            class="footer__social"
-          />
-        </ul>
-        <p class="footer__copyright">
-          © 2021 Loopstudios. All rights reserved.
-        </p>
+      <footer class="footer full-width content-grid">
+        <div class="footer__wrapper">
+          <img class="footer__logo" src="images/logo.svg" alt="loopstudios" />
+          <ul class="footer__links">
+            <li class="footer__link">About</li>
+            <li class="footer__link">Careers</li>
+            <li class="footer__link">Events</li>
+            <li class="footer__link">Products</li>
+            <li class="footer__link">Support</li>
+          </ul>
+          <ul class="footer__socials">
+            <img
+              src="images/icon-facebook.svg"
+              alt="facebook"
+              class="footer__social"
+            />
+            <img
+              src="images/icon-twitter.svg"
+              alt="twitter"
+              class="footer__social"
+            />
+            <img
+              src="images/icon-pinterest.svg"
+              alt="pinterest"
+              class="footer__social"
+            />
+            <img
+              src="images/icon-instagram.svg"
+              alt="instagram"
+              class="footer__social"
+            />
+          </ul>
+          <p class="footer__copyright">
+            © 2021 Loopstudios. All rights reserved.
+          </p>
+        </div>
       </footer>
     </main>
   </body>
