--- a/loopstudios-landing-page/index.html
+++ b/loopstudios-landing-page/index.html
@@ -10,20 +10,64 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="js/script.js"></script>
     <title>Frontend Mentor | Loopstudios landing page</title>
   </head>
   <body>
-    <main class="content-grid">
+    <main id="container-main" class="content-grid">
       <section class="splash full-width content-grid">
-        <header class="header">
-          <img class="header__logo" src="images/logo.svg" alt="loopstudios" />
+        <header class="header" id="container-header">
           <img
-            class="header__menu"
-            src="images/icon-hamburger.svg"
-            alt="menu"
+            class="header__logo"
+            id="main-logo"
+            src="images/logo.svg"
+            alt="loopstudios"
           />
+          <div class="header__menu-nav">
+            <button
+              class="header__menu--open"
+              id="btn-menu-open"
+              aria-haspopup="true"
+              aria-expanded="false"
+              aria-controls="menu"
+            >
+              <img
+                class="header__icn--open"
+                src="images/icon-hamburger.svg"
+                alt="hamburger menu button"
+              />
+            </button>
+            <nav
+              id="container-nav"
+              class="header__nav"
+              aria-labelledby="menu-label"
+              inert
+            >
+              <img
+                class="header__logo"
+                src="images/logo.svg"
+                alt="loopstudios"
+              />
+              <button id="btn-menu-close" class="header__menu--close">
+                <img
+                  class="header__icn--close"
+                  src="images/icon-close.svg"
+                  alt="close menu button"
+                />
+              </button>
+              <ul class="header__links">
+                <li><a href="#" class="header__link">About</a></li>
+                <li><a href="#" class="header__link">Careers</a></li>
+                <li><a href="#" class="header__link">Events</a></li>
+                <li><a href="#" class="header__link">Products</a></li>
+                <li><a href="#" class="header__link">Support</a></li>
+              </ul>
+            </nav>
+          </div>
         </header>
-        <h1 class="main-title">Immersive experiences that deliver</h1>
+        <h1 id="main-title" class="main-title">
+          Immersive experiences that deliver
+        </h1>
       </section>
       <section class="intro">
         <img
@@ -75,11 +119,11 @@
         <div class="footer__wrapper">
           <img class="footer__logo" src="images/logo.svg" alt="loopstudios" />
           <ul class="footer__links">
-            <li class="footer__link">About</li>
-            <li class="footer__link">Careers</li>
-            <li class="footer__link">Events</li>
-            <li class="footer__link">Products</li>
-            <li class="footer__link">Support</li>
+            <li><a href="#" class="footer__link">About</a></li>
+            <li><a href="#" class="footer__link">Careers</a></li>
+            <li><a href="#" class="footer__link">Events</a></li>
+            <li><a href="#" class="footer__link">Products</a></li>
+            <li><a href="#" class="footer__link">Support</a></li>
           </ul>
           <ul class="footer__socials">
             <img
